Updated CV, recompiled professional statements

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -187,10 +187,10 @@ Graduated as valedictorian of the College of Science, class of 2020
 \begin{reflist}
 
 
-    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2025). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation for the Journal of the American Statistical Association}.
+    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2025). Iterating marginalized Bayes maps for likelihood maximization with application to nonlinear panel models. arXiv:2511.17438 {\it preprint}.
 
 
-    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2025+). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}.
+    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2025+). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}. 	arXiv:2506.04508.
 
 \end{reflist}
 
@@ -198,7 +198,9 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item \textbf{2025}\, The Geological Society of America, Connects 2025 (Poster). San Antonio, TX. 
+    \item \textbf{2025}\, Epidemics 10: 10th International Conference on Infectious Disease Dynamics. San Diego, CA.
+
+    \item \textbf{2025}\, The Geological Society of America, Connects 2025 (Poster). San Antonio, TX.
 
     \item \textbf{2024}\, Modelling and inference for pandemic preparedness. Isaac Newton Institute, Cambridge, England.
     % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Modelling and inference for pandemic preparedness – a focussed workshop, Isaac Newton Institute, Cambridge, England}.
