--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -156,19 +156,19 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. L. (2025). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it PLOS ONE}, 20(10): e0333993. doi:10.1371/journal.pone.0333993
+    \item \textbf{Wheeler, J.}, Ionides, E. L. (2025). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it PLOS ONE}, 20(10): e0333993. doi:10.1371/journal.pone.0333993
 
-    \item Bret\'o, C., Wheeler\footnote{Corresponding Author}, J., King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it The R Journal}, 17, 180-199. doi:10.32614/RJ-2025-009.
+    \item Bret\'o, C., \textbf{Wheeler}\footnote{Corresponding Author}\textbf{, J.}, King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it The R Journal}, 17, 180-199. doi:10.32614/RJ-2025-009.
 
-    \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
+    \item Ionides, E. L., Ning, N. and \textbf{Wheeler, J.} (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024). Informing policy via dynamic models: Cholera in Haiti. {\it PLOS Computational Biology}, 20(4), e1012032. \\ doi:10.1371/journal.pcbi.1012032
+    \item \textbf{Wheeler, J.}, Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024). Informing policy via dynamic models: Cholera in Haiti. {\it PLOS Computational Biology}, 20(4), e1012032. \\ doi:10.1371/journal.pcbi.1012032
 
-    \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024). Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}, 150(1), 04023193. doi:10.1061/JSENDH.STENG-12396
+    \item Wagstaff, J., Bean, B., \textbf{Wheeler, J.}, Maguire, M., Sun, Y. (2024). Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}, 150(1), 04023193. doi:10.1061/JSENDH.STENG-12396
 
-    \item Wheeler, J., Bean, B., Maguire, M. (2022). Creating a Universal Depth-to-Load Conversion Technique for the Conterminous United States Using Random Forests. {\it Journal of Cold Regions Engineering, 36(1), 04021019}. doi:10.1061/(ASCE)CR.1943-5495.0000270
+    \item \textbf{Wheeler, J.}, Bean, B., Maguire, M. (2022). Creating a Universal Depth-to-Load Conversion Technique for the Conterminous United States Using Random Forests. {\it Journal of Cold Regions Engineering, 36(1), 04021019}. doi:10.1061/(ASCE)CR.1943-5495.0000270
 
-    \item White, T., Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2021). GPS-Denied Navigation Using SAR Images and Neural Networks. {\it ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}. Toronto, ON, Canada, 2021, pp. 2395-2399, doi:10.1109/ICASSP39728.2021.9414421.
+    \item White, T., \textbf{Wheeler, J.}, Lindstrom, C., Christensen, R., Moon, K. (2021). GPS-Denied Navigation Using SAR Images and Neural Networks. {\it ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}. Toronto, ON, Canada, 2021, pp. 2395-2399, doi:10.1109/ICASSP39728.2021.9414421.
 
 \end{reflist}
 
@@ -176,9 +176,9 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Bean, B., Maguire, M., Sun, Y., Wagstaff, J., Al-Rubaye, S., Wheeler, J., Jarman, S., Rogers, M. (2021). The 2020 National Snow Load Study. {\it Utah State University}. doi:10.26077/200k-pr86.
+    \item Bean, B., Maguire, M., Sun, Y., Wagstaff, J., Al-Rubaye, S., \textbf{Wheeler, J.}, Jarman, S., Rogers, M. (2021). The 2020 National Snow Load Study. {\it Utah State University}. doi:10.26077/200k-pr86.
 
-    \item Ionides, E. L., Wheeler, J. (2024). Review 2: ``Efficacy, Public Health Impact and Optimal Use of the Takeda Dengue Vaccine." Rapid Reviews Infectious Diseases. doi:10.1162/2e3983f5.1f0cb1f4.
+    \item Ionides, E. L., \textbf{Wheeler, J.} (2024). Review 2: ``Efficacy, Public Health Impact and Optimal Use of the Takeda Dengue Vaccine." Rapid Reviews Infectious Diseases. doi:10.1162/2e3983f5.1f0cb1f4.
 
 \end{reflist}
 
@@ -186,11 +186,11 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
+    \item \textbf{Wheeler, J.}, Abkemeier, A. A., Ionides, E. L. (2025+). Iterating marginalized Bayes maps for likelihood maximization with application to nonlinear panel models. {\it Submitted to the Journal of the American Statistical Association, Theory and Methods} arXiv:2511.17438.
 
-    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2025). Iterating marginalized Bayes maps for likelihood maximization with application to nonlinear panel models. arXiv:2511.17438 {\it preprint}.
+    \item Yang, B., \textbf{Wheeler, J.}, King, A., Duffy, M., Ionides, E. L. (2025+). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}. 	arXiv:2506.04508.
 
-
-    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2025+). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}. 	arXiv:2506.04508.
+    \item Omotowa, O., Ankarberg, L., Gist, K., \textbf{Wheeler, J.}, Nies, M. (2025+). Caring for Older Adults in Nursing Homes: Attitudes and Willingness of Racial Minority Undergraduate Nursing Students. {\it In preperation for The Educational Gerontology journal}.
 
 \end{reflist}
 
@@ -228,6 +228,10 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \end{reflist}
 
+\subsection*{Grants and Funding}
+
+\noindent \textbf{Development of a statistical framework for the evaluation of management strategies for freshwater fisheries}. {\it Oak Ridge Associated Universities: Ralph E. Powe Junior Faculty Enhancement Award.} Submitted January, 2026.
+
 \subsection*{Awards}
 
 \noindent\hspace{5mm}\textbf{StatsForward Fellowship}, The American Statistical Association. \hfill{\textit{September 2025}}
@@ -260,6 +264,13 @@ Graduated as valedictorian of the College of Science, class of 2020
 \hspace{5mm}{\it Award amount: $\$1000$}
 
 \section*{Teaching}
+
+
+\noindent \textbf{Curriculum Development} \hfill
+
+\begin{teachinglsit}
+  \item Revision of \textbf{Math 4450}, \textit{Idaho State University}. Redesigned course that had not been taught by any current faculty. Course material is available on accompanying course website: \url{https://jeswheel.github.io/4450\_f25/}.
+\end{teachinglsit}
 
 \noindent \textbf{Idaho State University} \hfill  {\textit{2025--present}}
 
@@ -301,6 +312,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
+  \item Spencer Paternoster. Restricted Maximum Likelihood estimators for ARMA models. 2025.
   \item Peter Yang. Applications of Partially Observed Markov Processes with phylogenetic data. Honors thesis, 2025.
   \item Weizhe Sun. Model Based Inference of Stochastic Volatility via Iterated Filtering. Honors thesis, 2024.
   \item Zuyuan Han. Signature Methods in Variance Swap Pricing. Honors thesis, 2023.
@@ -323,7 +335,11 @@ Graduated as valedictorian of the College of Science, class of 2020
 \noindent \textbf{Committee Chair} \hfill {\it 2023--Present}
 
 \vspace{2mm}
-\noindent \textbf{Peer Reviews}: PLOS Computation Biology, Nature Communications, Rapid Reviews Infectious Diseases, Bulletin of Mathematical Biology
+
+\noindent \textbf{Invited Judge}, The American Statistical Association, Statistics in Epidemiology Section: 2026 SIE Early Career Paper Competition.
+
+\vspace{2mm}
+\noindent \textbf{Peer Reviews}: PLOS Computation Biology, Nature Communications, Rapid Reviews Infectious Diseases, Bulletin of Mathematical Biology, Scientific Reports
 
 \vspace{2mm}
 \noindent \textbf{President, USU Data Science Club} \hfill  {\textit{2019--2020}}
