Updated CV with biology presentation

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -198,7 +198,9 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item \textbf{2025}\, Epidemics 10: 10th International Conference on Infectious Disease Dynamics. San Diego, CA.
+    \item \textbf{2025}\, Idaho State University, invited colloquium speaker in Biology Department.
+
+    \item \textbf{2025}\, Epidemics 10: 10th International Conference on Infectious Disease Dynamics (poster). San Diego, CA.
 
     \item \textbf{2025}\, The Geological Society of America, Connects 2025 (Poster). San Antonio, TX.
 
@@ -227,6 +229,15 @@ Graduated as valedictorian of the College of Science, class of 2020
     % \item Christensen, D., Villanueva, I., Wheeler, J., Vicioso, P., Husman, J., Lampkins, S., Youmans, K. (2019). Exploring Potential Relationships Between Self-Efficacy, Performance, and Electrodermal Activity in Engineering Exams. {\it American Educational Research Association.} April 5-9. Toronto, Canada.
 
 \end{reflist}
+
+\subsection*{Research Consulting}
+
+\textbf{Statistical Consultant}, NIH R16 (SuRE-First) grant application with Dr. Solomon Zeleke.
+
+\textbf{Healthy Idaho CTR-D Pilot Project Awards}. \textit{NIH funded project}.
+Part of NIH-grant supported team of biostaticians to review and consult on NIH developemental and pilot grants.
+Listed as a key collaborator for the CTR-D submission by Dr. Solomon Zeleke.
+
 
 \subsection*{Grants and Funding}
 
